# AnimeWisdomVault

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
data/: lessreal-data.csv
