[tool.poetry]
name = "animewisdomvault"
version = "0.1.0"
description = "Anime Quotes"
authors = ["Akshat Pande"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
matplotlib = "^3.8.2"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
